<?xml version="1.0" encoding="utf-8"?>
<!-- Migrated from PreferenceActivity to PreferenceFragmentCompat.
     Consolidates pref_general, pref_drone_fcbsettings, pref_drone_fpvsettings_noexternalcam,
     pref_drone_systemrecovery, and feedback_support into a single root resource. -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- General (no category title, matching original layout) -->
    <ListPreference
        android:title="@string/pref_gr_unitmetric"
        android:key="frOdcS6H9DA"
        android:entries="@array/pref_gr_unitmetric_unitTypes"
        android:entryValues="@array/pref_gr_unitmetric_unitTypesValues"
        android:summary="@string/pref_gr_unitmetric_summary" />


    <!-- FCB & Telemetry -->
    <PreferenceCategory android:title="@string/pref_gr_fcb">

        <CheckBoxPreference
            android:title="@string/pref_gr_fcb_autofcbconnect"
            android:key="skiuLMsCOCFVqQ"
            android:summary="@string/pref_gr_fcb_autofcbconnect_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:title="@string/pref_gr_fcb_autostart"
            android:key="vyqtl51lG0OWxf64b1j37g"
            android:summary="@string/pref_gr_fcb_autostart_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:title="@string/pref_gr_fcb_ignore_mobsensors"
            android:key="mePMWRUHZFwA"
            android:summary="@string/pref_gr_fcb_ignore_mobsensors_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:title="@string/pref_gr_fcb_gps_injection"
            android:key="gps_inject"
            android:summary="@string/pref_gr_fcb_gps_injection_summary"
            android:defaultValue="true" />

    </PreferenceCategory>


    <!-- FPV & Settings -->
    <PreferenceCategory android:title="@string/pref_gr_fpv_settings">

        <ListPreference
            android:title="@string/pref_gr_fpv_videocameraselect"
            android:key="MwESFWhA"
            android:summary="@string/pref_gr_fpv_videocameraselect_summary"
            android:entries="@array/pref_gr_fpv_videocameraselect"
            android:entryValues="@array/pref_gr_fpv_videocameraselect_value" />

        <CheckBoxPreference
            android:title="@string/pref_gr_fpv_switch_cam_rc_enable"
            android:key="sw_cam_rc_en"
            android:summary="@string/pref_gr_fpv_switch_cam_rc_enable_summary"
            android:defaultValue="false" />

        <EditTextPreference
            android:title="@string/pref_gr_fpv_switch_cam_rc_ch_num"
            android:key="sw_cam_rc_num"
            android:summary="@string/pref_gr_fpv_switch_cam_rc_ch_num_summary" />

        <EditTextPreference
            android:title="@string/pref_gr_fpv_switch_cam_rc_ch_num_min"
            android:key="sw_cam_rc_pwm"
            android:summary="@string/pref_gr_fpv_switch_cam_rc_ch_num_min_summary" />

        <CheckBoxPreference
            android:title="@string/pref_gr_fpv_videocam_sendback"
            android:key="sbimg"
            android:summary="@string/pref_gr_fpv_videocam_sendback_summary"
            android:defaultValue="true" />

        <ListPreference
            android:title="@string/pref_gr_fpv_streamres_back"
            android:key="streamResModeBack"
            android:summary="@string/pref_gr_fpv_streamres_back_summary"
            android:entries="@array/pref_gr_fpv_streamres_options"
            android:entryValues="@array/pref_gr_fpv_streamres_options_value"
            android:defaultValue="1" />

        <ListPreference
            android:title="@string/pref_gr_fpv_streamres_front"
            android:key="streamResModeFront"
            android:summary="@string/pref_gr_fpv_streamres_front_summary"
            android:entries="@array/pref_gr_fpv_streamres_options"
            android:entryValues="@array/pref_gr_fpv_streamres_options_value"
            android:defaultValue="1" />

        <EditTextPreference
            android:title="@string/pref_gr_fpv_stunserver"
            android:key="ufcQwjT6FEe"
            android:summary="@string/pref_gr_fpv_stunserver_summary" />

    </PreferenceCategory>


    <!-- Safety & Recovery -->
    <PreferenceCategory android:title="@string/pref_gr_recovery">

        <ListPreference
            android:title="@string/pref_gr_recovery_fm_chk"
            android:key="PUMKXwYrA"
            android:summary="@string/pref_gr_recovery_fm_chk_summary"
            android:entries="@array/pref_gr_recovery_fm"
            android:entryValues="@array/pref_gr_recovery_fm_value" />

        <EditTextPreference
            android:title="@string/pref_gr_recovery_edt_blk_battery_min"
            android:key="WiDVQ"
            android:inputType="phone"
            android:summary="@string/pref_gr_recovery_edt_blk_battery_min_summary" />

        <CheckBoxPreference
            android:title="@string/pref_gr_recovery_flash_chk"
            android:key="Ua22l1asZBc3w"
            android:summary="@string/pref_gr_recovery_flash_chk_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:title="@string/pref_gr_recovery_siren_chk"
            android:key="f7LyU1wAGk"
            android:summary="@string/pref_gr_recovery_siren_chk_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:title="@string/pref_gr_sms_rx_chk"
            android:key="key_sms_rx_chk"
            android:summary="@string/pref_gr_sms_rx_chk_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:title="@string/pref_gr_sms_chk"
            android:key="key_sms_chk"
            android:summary="@string/pref_gr_sms_chk_summary"
            android:defaultValue="false" />

        <EditTextPreference
            android:title="@string/pref_gr_sms_recovery_txt"
            android:key="key_mobile_recovery"
            android:inputType="phone" />

        <CheckBoxPreference
            android:title="@string/pref_gr_recovery_chk_rc_block"
            android:key="RFdWXmZaN0"
            android:summary="@string/pref_gr_recovery_chk_rc_block_summary"
            android:defaultValue="false" />

        <EditTextPreference
            android:title="@string/pref_gr_recovery_edt_rcCh_blk_trigger"
            android:key="key_block_channel"
            android:summary="@string/pref_gr_recovery_edt_rcCh_blk_trigger_summary"
            android:inputType="phone" />

        <EditTextPreference
            android:title="@string/pref_gr_recovery_edt_blk_trigger_min"
            android:key="key_block_pwm_min"
            android:inputType="phone"
            android:summary="@string/pref_gr_recovery_edt_blk_trigger_min_summary" />

    </PreferenceCategory>


    <!-- Feedback & Support -->
    <PreferenceCategory android:title="@string/pref_feedback_support">

        <Preference
            android:key="pref_visitWeb"
            android:title="@string/pref_gr_help_web">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_gr_help_weburl" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
