<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:title="@string/pref_gr_fcb_autofcbconnect"
        android:key="skiuLMsCOCFVqQ"
        android:summary="@string/pref_gr_fcb_autofcbconnect_summary"
        android:defaultValue="false"
        />
    <CheckBoxPreference
        android:title="@string/pref_gr_fcb_autostart"
        android:key="vyqtl51lG0OWxf64b1j37g"
        android:summary="@string/pref_gr_fcb_autostart_summary"
        android:defaultValue="false"
        />
    <CheckBoxPreference
        android:title="@string/pref_gr_fcb_ignore_mobsensors"
        android:key="mePMWRUHZFwA"
        android:summary="@string/pref_gr_fcb_ignore_mobsensors_summary"
        android:defaultValue="false"
        />
    <CheckBoxPreference
        android:title="@string/pref_gr_fcb_gps_injection"
        android:key="gps_inject"
        android:summary="@string/pref_gr_fcb_gps_injection_summary"
        android:defaultValue="true"
        />



</PreferenceScreen>