<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



<!--    <ListPreference-->
<!--        android:title="@string/pref_gr_fpv_videocamerarotation"-->
<!--        android:key="KvLOEuLDz25cJg"-->
<!--        android:summary="@string/pref_gr_fpv_videocamerarotation_summary"-->
<!--        android:entries="@array/pref_gr_fpv_videocamerarotation"-->
<!--        android:entryValues="@array/pref_gr_fpv_videocamerarotation_value" />-->


    <ListPreference
        android:title="@string/pref_gr_fpv_screenorientation"
        android:key="OkWrZGmycoEKtw"
        android:summary="@string/pref_gr_fpv_screenorientation_summary"
        android:entries="@array/pref_gr_fpv_screenorientation"
        android:entryValues="@array/pref_gr_fpv_screenorientation_value" />

    <CheckBoxPreference
        android:title="@string/pref_gr_fpv_videocamemirrored"
        android:key="Nzz7jbzi"
        android:summary="@string/pref_gr_fpv_videocamemirrored_summary"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:title="@string/pref_gr_fpv_onlylocal_stunserver"
        android:key="AxU1KiBEH2w"
        android:summary="@string/pref_gr_fpv_onlylocal_stunserver_summary"
        android:defaultValue="false"
        />
    <EditTextPreference
        android:title="@string/pref_gr_fpv_stunserver"
        android:key="ufcQwjT6FEe"
        android:summary="@string/pref_gr_fpv_stunserver_summary"

        />


</PreferenceScreen>