<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp"
    android:background="@android:color/white">



    <TextView
        android:layout_width="match_parent"
        android:text="@string/mdlgsos_Title"
        android:id="@+id/mdlgsos_txt_title"
        android:textStyle="bold"
        android:textColor="@color/btn_TXT_WHITE"
        android:background="@color/btn_TXT_BLUE"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="3dp"/>




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mdlgsos_btn_whistle"
        android:background="@drawable/sel_trans_button_color"
        android:drawableTop="@drawable/loud_rb_32x32"
        android:text="@string/action_sos_whistle"
        android:textSize="10dp"
        android:padding="1dp"
        style="?android:attr/buttonStyleSmall"
        android:layout_below="@+id/mdlgsos_txt_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mdlgsos_btn_sms"
        android:background="@drawable/sel_trans_button_color"
        android:drawableTop="@drawable/sms_rb_32x32"
        android:text="@string/action_sos_sms"
        android:textSize="10dp"
        android:padding="1dp"
        style="?android:attr/buttonStyleSmall"
        android:layout_toRightOf="@+id/mdlgsos_btn_whistle"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@+id/mdlgsos_btn_whistle" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mdlgsos_btn_flash"
        android:background="@drawable/sel_trans_button_color"
        android:drawableTop="@drawable/siren_rb_32x32"
        android:text="@string/action_sos_flash"
        android:textSize="10dp"
        android:padding="1dp"
        style="?android:attr/buttonStyleSmall"
        android:layout_toRightOf="@+id/mdlgsos_btn_sms"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@+id/mdlgsos_btn_sms" />


</RelativeLayout>